insert break at headline,fix rigth aligment of header section and p

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -23,7 +23,12 @@ main {
   align-items: flex-start;
   justify-content: center;
   background-repeat: no-repeat;
+  background-position: 0 0;
   flex-direction: column;
+}
+
+.header-content span {
+  margin-right: 20px;
 }
 
 .header-content {
